log/build_2023-02-02_15-41-59/asbir_navigation/stdout_stderr.log
running egg_info
writing ../../build/asbir_navigation/asbir_navigation.egg-info/PKG-INFO
writing dependency_links to ../../build/asbir_navigation/asbir_navigation.egg-info/dependency_links.txt
writing entry points to ../../build/asbir_navigation/asbir_navigation.egg-info/entry_points.txt
writing requirements to ../../build/asbir_navigation/asbir_navigation.egg-info/requires.txt
writing top-level names to ../../build/asbir_navigation/asbir_navigation.egg-info/top_level.txt
reading manifest file '../../build/asbir_navigation/asbir_navigation.egg-info/SOURCES.txt'
writing manifest file '../../build/asbir_navigation/asbir_navigation.egg-info/SOURCES.txt'
running build
running build_py
copying asbir_navigation/buildBestPath.py -> /home/aralab/ASBIR-ROS2/build/asbir_navigation/build/lib/asbir_navigation
copying asbir_navigation/classes.py -> /home/aralab/ASBIR-ROS2/build/asbir_navigation/build/lib/asbir_navigation
copying asbir_navigation/graphTest.py -> /home/aralab/ASBIR-ROS2/build/asbir_navigation/build/lib/asbir_navigation
running install
running install_lib
copying /home/aralab/ASBIR-ROS2/build/asbir_navigation/build/lib/asbir_navigation/buildBestPath.py -> /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation
copying /home/aralab/ASBIR-ROS2/build/asbir_navigation/build/lib/asbir_navigation/classes.py -> /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation
copying /home/aralab/ASBIR-ROS2/build/asbir_navigation/build/lib/asbir_navigation/graphTest.py -> /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation
byte-compiling /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/buildBestPath.py to buildBestPath.cpython-38.pyc
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/buildBestPath.py", line 44
    parsed=search('-source=(id={}, frame_pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id=\'{}\'), point=geometry_msgs.msg.Point(x={}, y={}, z={})), surface={}, edge=True, ground=False, pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id='odom_frame'), point=geometry_msgs.msg.Point(x=0.5, y=-0.12033333333333332, z=1.127))) ,target=(id=surfaceA_1_1, frame_pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id='surfaceA'), point=geometry_msgs.msg.Point(x=0.1905, y=0.24066666666666667, z=0.0)), surface=surfaceA, edge=False, ground=False, pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id='odom_frame'), point=geometry_msgs.msg.Point(x=0.6905, y=-0.12033333333333332, z=1.127))) ,distance=0.1905,rotation=geometry_msgs.msg.Quaternion(x=0.0, y=0.0, z=0.0, w=1.0)')
                                                                                                                                                                                                                                                                                                                                                                                                  ^
SyntaxError: invalid syntax

byte-compiling /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/classes.py to classes.cpython-38.pyc
byte-compiling /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/graphTest.py to graphTest.cpython-38.pyc
running install_data
running install_egg_info
removing '/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/asbir_navigation/asbir_navigation.egg-info to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation-0.0.0-py3.8.egg-info
running install_scripts
Installing buildBestPath script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
Installing frameTest script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
Installing graphTest script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
Installing modelTest script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
Installing odomFrame script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
Installing pointPub script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
Installing potentialField script to /home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/asbir_navigation
writing list of installed files to '/home/aralab/ASBIR-ROS2/build/asbir_navigation/install.log'
